--- a/index.html
+++ b/index.html
@@ -26,34 +26,36 @@
             <section class="container-grande"> <!-- creazione secondo container (grande) -->
                 <div class="lista"> <!-- inizio lista annidata e task precedenti -->
                     <ul>
-                        <li>
+                        <!-- <li>
                             <h3> &#10148; TASK PRECEDENTI</h3>
                         </li>
                         <ul>
                             <li class="elementi-sottolineati">
                                 <p class="cross">Quarterly Newsletter <span class="editorial">Editorial</span></p>
                             </li>
-                        </ul>
+                        </ul> -->
                         <!-- task oggi -->
                         <li>
                             <h3>&#10148; OGGI</h3>
                         </li>
                         <ul>
-                            <li class="elementi-sottolineati">
-                                <p>Recruiting blog post<span class="editorial">Editorial</span></p>
-                            </li>
-                            <li class="elementi-sottolineati">
+                            <li 
+                            class="elementi-sottolineati"
+                            v-for = "curItem in todoList"
+                            :class = """
+                            >{{ curItem.text }}</li>
+                            <!-- <li class="elementi-sottolineati done">
                                 <p>Mobile app luaunch<span class="q1-goals">Q1 Goals</span></p>
                             </li>
-                            <li class="elementi-non-sottolineati">
+                            <li class="elementi-non-sottolineati todo">
                                 <p>Interview Jhon H. <span class="recruiting">Recruiting</span></p>
                             </li>
-                            <li class="elementi-sottolineati">
+                            <li class="elementi-sottolineati done">
                                 <p>Summit update to mobile storefronts <span class="mobile">Mobile</span></p>
-                            </li>
+                            </li> -->
                         </ul>
                         <!-- task prossimi giorni -->
-                        <li>
+                        <!-- <li>
                             <h3> &#10148; PROSSIMI GIORNI</h3>
                         </li>
                         <ul>
@@ -69,7 +71,7 @@
                             <li class="elementi-sottolineati">
                                 <p>Reviwe editorial calendar <span class="editorial">Editorial</span></p>
                             </li>
-                        </ul>
+                        </ul> -->
                     </ul>
                 </div>
             </section>
